fix: Forgot to copy `.dll` to `bin`

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,4 +52,5 @@ jobs:
 
         - name: Run Test Application
           run: |
+            cp "dynamic-libs/win64/leveldb.dll" "bin"
             bin/testleveldb --all --format=plain
